logs/django-future.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_future'...
Listing './lib/python3.5/site-packages/django_future/locale'...
Listing './lib/python3.5/site-packages/django_future/locale/de'...
Listing './lib/python3.5/site-packages/django_future/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_future/locale/en'...
Listing './lib/python3.5/site-packages/django_future/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_future/management'...
Listing './lib/python3.5/site-packages/django_future/management/commands'...
Compiling './lib/python3.5/site-packages/django_future/management/commands/runscheduledjobs.py'...
***   File "./lib/python3.5/site-packages/django_future/management/commands/runscheduledjobs.py", line 27
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_future/tests.py'...
***   File "./lib/python3.5/site-packages/django_future/tests.py", line 16
    print 'Simple job executed.'
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/django_future-0.2.3.egg-info'...
Listing './lib/python3.5/site-packages/django_picklefield-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/picklefield'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
